package com.asp.proto;

enum MessageType {
	GET_SERVER_LIST_REQUEST = 1;
	GET_SERVER_LIST_RESPONSE = 2;

	GET_SUPPORTED_CITY_REQUEST = 15;
	GET_SUPPORTED_CITY_RESPONSE = 16;

	SAVE_GET_SETTING_REQUEST = 23;
	SAVE_GET_SETTING_RESPONSE = 24;
	SUBMIT_ADVISE_REQUEST = 25;

	CHECK_UPDATES_REQUEST = 34; //检查更新请求
	CHECK_UPDATES_RESPONSE = 35;
    GET_APPSTORE_URL_REQUEST = 37; //获取appstore url
	GET_APPSTORE_URL_RESPONSE = 38;

	GET_SUPPORT_CAR_TYPE_REQUEST = 41;
	GET_SUPPORT_CAR_TYPE_RESPONSE = 42;

	SUBMIT_CAR_RENT_ORDER_REQUEST = 53;
	SUBMIT_CAR_RENT_ORDER_RESPONSE = 54;

	CANCEL_CAR_RENT_ORDER_REQUEST = 62;
	CANCEL_CAR_RENT_ORDER_RESPONSE = 63;

	QUERY_CAR_RENT_ORDER_STATUS_REQUEST = 71;
	QUERY_CAR_RENT_ORDER_STATUS_RESPONSE = 72;

    APP_USER_REGIST = 100;
    APP_USER_LOGIN = 101;
    APP_USER_LOGOUT = 102;
    NOTIFY_MESSAGE = 999;
	ERROR_MESSAGE = 1000;
	UPDATE_CRYPT_KEY = 1001;
}

enum ErrorType {
    UNKNOWN_ERROR = 0;
    ORDERID_DUPLICATE = 1;
    ORDERID_NOTFOULD= 2;
}

message UpdatedCryptKey {
	required string new_key = 1; 
}

